--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
         <li>nome</li>
         <li>nome</li>
     </ul>
-    <ol>
+
+    <ol type="I">
         <li>nome</li>
         <li>nome</li>
         <li>nome</li>
         <li>nome</li>
     </ol>
+    <img src="batman.jfif" alt="" width="200" height="150">
+    <br>
+
+    <a href="http://github.com/ictor226">github victor</a>
+
     
 </body>
 </html>
